--- a/src/App.css
+++ b/src/App.css
@@ -13,26 +13,34 @@
   }
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.container {
   display: flex;
   flex-direction: column;
   align-items: center;
+}
+
+h3 {
+  text-align: center;
+}
+
+.form {
+  width: 300px;
+  height: 50px;
+  margin: 30px 0;
+}
+
+.container-btn {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  margin: 40px 0;
 }
 
-.App-link {
-  color: #61dafb;
+button {
+  margin-right: 20px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+button:last-child {
+  margin: 0;
 }
